Added block Ginecology Surgegy

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -137,7 +137,7 @@
         },
         "breadcrumbs": {
             "main": "الرئيسية",
-            "salon": "الصالون",
+            "about": "حول",
             "massage": "التدليك",
             "course": "الدورات",
             "media": "وسائل الإعلام",
@@ -168,5 +168,41 @@
     },
     "trustCareBanner": {
         "title": "الثقة والرعاية — مصدر سلامك وصحتك"
+    },
+    "gynecology": {
+        "title": "جراحة أمراض النساء",
+        "description": "يتخصص د. سيرجي تونيتسكي في جراحة أمراض النساء الحديثة، ويقدم علاجاً شاملاً لحالات صحية نسائية متنوعة. مع أكثر من 25 عاماً من الخبرة، يقوم بإجراءات جراحية روتينية ومعقدة باستخدام تقنيات طفيفة التوغل. نهجنا يجمع بين التكنولوجيا الطبية المتقدمة والرعاية الشخصية لضمان نتائج مثلى لكل مريضة. نعالج مجموعة واسعة من حالات أمراض النساء، بما في ذلك الأورام الليفية والانتباذ البطاني الرحمي وأمراض المبيض وأشكال مختلفة من السرطان. كل خطة علاج مصممة بعناية لتلبية الاحتياجات الفردية وأهداف الصحة.",
+        "gynecologicalDiseases": {
+            "title": "أمراض النساء",
+            "description": "تشخيص وعلاج شامل لحالات أمراض النساء المختلفة التي تؤثر على الصحة الإنجابية والرفاهية العامة للمرأة."
+        },
+        "gynecologicalSurgery": {
+            "title": "الجراحة",
+            "description": "إجراءات جراحية متقدمة لعلاج حالات أمراض النساء باستخدام تقنيات ومعدات طفيفة التوغل حديثة."
+        },
+        "oncologicalSurgeries": {
+            "title": "علم الأورام",
+            "description": "علاج جراحي متخصص لسرطانات أمراض النساء، بما في ذلك سرطانات المبيض وعنق الرحم وبطانة الرحم وأورام خبيثة أخرى في الجهاز التناسلي."
+        },
+        "plasticSurgery": {
+            "title": "الجراحة التجميلية",
+            "description": "إجراءات جراحية تجميلية وإعادة بناء للجهاز التناسلي الأنثوي، بما في ذلك جراحة الشفرين وإعادة بناء غشاء البكارة."
+        },
+        "uterineFibroids": {
+            "title": "أورام الرحم الليفية",
+            "description": "علاج الأورام الحميدة في الرحم، بما في ذلك استئصال الورم الليفي واستئصال الرحم وتدخلات جراحية أخرى لإدارة الأورام الليفية."
+        },
+        "endometriosis": {
+            "title": "الانتباذ البطاني الرحمي",
+            "description": "العلاج الجراحي للانتباذ البطاني الرحمي، بما في ذلك الاستئصال بالمنظار لزرعات بطانة الرحم وإجراءات إزالة الكيس."
+        },
+        "ovarianDiseases": {
+            "title": "أمراض المبيض",
+            "description": "تشخيص وعلاج جراحي لحالات المبيض المختلفة، بما في ذلك الأكياس والأورام وتغيرات مرضية أخرى."
+        },
+        "polyps": {
+            "title": "الزوائد اللحمية",
+            "description": "إزالة زوائد بطانة الرحم وعنق الرحم من خلال تقنيات جراحية بالمنظار الرحمي وطرق طفيفة التوغل أخرى."
+        }
     }
 }
