--- a/public/locales/he/common.json
+++ b/public/locales/he/common.json
@@ -137,7 +137,7 @@
     },
     "breadcrumbs": {
       "main": "בית",
-      "salon": "סלון",
+      "about": "אודות",
       "massage": "עיסוי",
       "course": "קורסים",
       "media": "מדיה",
@@ -168,5 +168,41 @@
   },
   "trustCareBanner": {
     "title": "אמון וטיפול — מקור השלום והבריאות שלך"
+  },
+  "gynecology": {
+    "title": "כירורגיה גינקולוגית",
+    "description": "ד\"ר סרגיי טוניצקי מתמחה בכירורגיה גינקולוגית מודרנית, ומציע טיפול מקיף למצבי בריאות נשית שונים. עם יותר מ-25 שנות ניסיון, הוא מבצע הליכים כירורגיים שגרתיים ומורכבים באמצעות טכניקות פולשניות מינימלית. הגישה שלנו משלבת טכנולוגיה רפואית מתקדמת עם טיפול אישי כדי להבטיח תוצאות אופטימליות לכל מטופלת. אנו מטפלים במגוון רחב של מצבים גינקולוגיים, כולל שרירנים, אנדומטריוזיס, מחלות שחלות וצורות שונות של סרטן. כל תוכנית טיפול מותאמת בקפידה לענות על הצרכים האישיים ומטרות הבריאות.",
+    "gynecologicalDiseases": {
+      "title": "גינקולוגיה",
+      "description": "אבחון וטיפול מקיף במצבים גינקולוגיים שונים המשפיעים על בריאות הרבייה והרווחה הכללית של נשים."
+    },
+    "gynecologicalSurgery": {
+      "title": "כירורגיה",
+      "description": "הליכים כירורגיים מתקדמים לטיפול במצבים גינקולוגיים באמצעות טכניקות וציוד פולשניים מינימלית מודרניים."
+    },
+    "oncologicalSurgeries": {
+      "title": "אונקולוגיה",
+      "description": "טיפול כירורגי מיוחד לסרטנים גינקולוגיים, כולל סרטן שחלות, צוואר הרחם, רירית הרחם וגידולים ממאירים אחרים במערכת הרבייה."
+    },
+    "plasticSurgery": {
+      "title": "כירורגיה פלסטית",
+      "description": "הליכים כירורגיים קוסמטיים ושיקומיים למערכת הרבייה הנשית, כולל למינופלסטיקה והימנופלסטיקה."
+    },
+    "uterineFibroids": {
+      "title": "שרירנים ברחם",
+      "description": "טיפול בגידולים שפירים ברחם, כולל מיומקטומיה, כריתת רחם והתערבויות כירורגיות אחרות לניהול שרירנים."
+    },
+    "endometriosis": {
+      "title": "אנדומטריוזיס",
+      "description": "טיפול כירורגי באנדומטריוזיס, כולל הסרה לפרוסקופית של שתלי רירית הרחם והליכי הסרת ציסטות."
+    },
+    "ovarianDiseases": {
+      "title": "מחלות שחלות",
+      "description": "אבחון וטיפול כירורגי במצבי שחלות שונים, כולל ציסטות, גידולים ושינויים פתולוגיים אחרים."
+    },
+    "polyps": {
+      "title": "פוליפים",
+      "description": "הסרת פוליפים של רירית הרחם וצוואר הרחם באמצעות טכניקות כירורגיות היסטרוסקופיות ופולשניות מינימלית אחרות."
+    }
   }
 }
