--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -143,7 +143,7 @@
         },
         "breadcrumbs": {
             "main": "Главная",
-            "salon": "Салон",
+            "about": "О нас",
             "massage": "Массаж",
             "course": "Курсы",
             "media": "Медиа",
@@ -184,5 +184,41 @@
     },
     "trustCareBanner": {
         "title": "Доверие и забота — ваш источник покоя и здоровья"
+    },
+    "gynecology": {
+        "title": "Гинекологическая хирургия",
+        "description": "Доктор Сергей Туницкий специализируется на современной гинекологической хирургии, предлагая комплексное лечение различных состояний женского здоровья. Имея более 25 лет опыта, он выполняет как плановые, так и сложные хирургические процедуры с использованием малоинвазивных техник. Наш подход сочетает передовые медицинские технологии с персонализированным уходом для обеспечения оптимальных результатов для каждого пациента. Мы лечим широкий спектр гинекологических состояний, включая миомы, эндометриоз, заболевания яичников и различные формы рака. Каждый план лечения тщательно адаптирован для удовлетворения индивидуальных потребностей и целей здоровья.",
+        "gynecologicalDiseases": {
+            "title": "Гинекология",
+            "description": "Комплексная диагностика и лечение различных гинекологических состояний, влияющих на репродуктивное здоровье и общее самочувствие женщин."
+        },
+        "gynecologicalSurgery": {
+            "title": "Хирургия",
+            "description": "Современные хирургические процедуры для лечения гинекологических состояний с использованием современных малоинвазивных техник и оборудования."
+        },
+        "oncologicalSurgeries": {
+            "title": "Онкология",
+            "description": "Специализированное хирургическое лечение гинекологических раков, включая рак яичников, шейки матки, эндометрия и другие злокачественные новообразования репродуктивной системы."
+        },
+        "plasticSurgery": {
+            "title": "Пластическая хирургия",
+            "description": "Косметические и реконструктивные хирургические процедуры для женской репродуктивной системы, включая лабиопластику и гименопластику."
+        },
+        "uterineFibroids": {
+            "title": "Миома матки",
+            "description": "Лечение доброкачественных опухолей матки, включая миомэктомию, гистерэктомию и другие хирургические вмешательства для лечения миомы."
+        },
+        "endometriosis": {
+            "title": "Эндометриоз",
+            "description": "Хирургическое лечение эндометриоза, включая лапароскопическое иссечение эндометриоидных имплантов и процедуры удаления кист."
+        },
+        "ovarianDiseases": {
+            "title": "Заболевания яичников",
+            "description": "Диагностика и хирургическое лечение различных состояний яичников, включая кисты, опухоли и другие патологические изменения."
+        },
+        "polyps": {
+            "title": "Полипы",
+            "description": "Удаление эндометриальных и цервикальных полипов с помощью гистероскопических и других малоинвазивных хирургических техник."
+        }
     }
 }
